--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -4,13 +4,13 @@
 }
 
 .posts .post {
-  margin-bottom: 0.75em;
+  margin-bottom: 0em;
   border-bottom: thin solid #f3f3f3;
 }
 
 .posts .post:last-child {
   border-bottom: none;
-  margin-bottom: .375em;
+  margin-bottom: .0em;
   padding-bottom: 0;
 }
 
@@ -23,12 +23,12 @@
 .post-footer {
   @extend .italic;
 
-  margin-top: .75rem;
+  margin-top: .0rem;
   text-align: center;
 }
 
 .post-footer .avatar {
-  margin: 2rem 0;
+  margin: 0rem 0;
   width: 100px;
   border-radius: 50%;
 }
@@ -38,7 +38,7 @@
   width: auto;
   font-weight: 300;
   margin: 0;
-  padding: .25em 0;
+  padding: 0em 0;
   color: #7a7a7a;
   font-style: italic;
 }
