--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -42,6 +42,9 @@
     {% if site.vimeo_username %}
       <a class="fa fa-vimeo" href="https://vimeo.com/{{ site.vimeo_username }}"></a>
     {% endif %}
+    {% if site.pinterest_username %}
+      <a class="fa fa-pinterest" href="https://www.pinterest.com/{{ site.pinterest_username }}"></a>
+    {% endif %}
   </div>
   <div class="right">
     {% if site.bitcoin_url %}
