simplify homepage: move linkedin icon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-      &copy; 2010-2018 <a href="http://www.zitaoliu.com">zitaoliu.com</a> All Rights Reserved Worldwide. Theme crafted by John Otander. <br>
-      {% include social_links.html %}
+      &copy; 2010-2018 <a href="http://www.zitaoliu.com">zitaoliu.com</a> All Rights Reserved Worldwide. Theme crafted by John Otander.
     </small>
   </div>
 </footer>
