--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,6 @@
 <header class="site-header px2 px-responsive">
   <div class="mt2 wrap">
     <div class="measure">
-      <a href="{{ site.url }}" class="site-title">{{ site.title }}</a> {% include social_links.html %}
-      <nav class="site-nav">
-        {% include navigation.html %}
-      </nav>
+      <a href="{{ site.url }}" class="site-title">{{ site.title }}</a>
   </div>
 </header>
